Change Alternate phone number placeholder and label and fix the alignment

--- a/apps/registration/src/pages/createPatientPage/styles/index.module.scss
+++ b/apps/registration/src/pages/createPatientPage/styles/index.module.scss
@@ -145,7 +145,7 @@
   .row {
   display: flex;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .col {
